hold dependencies in code, to prevent pulling when building

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
 
     # install golang deps
     - run: curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-    - run: dep ensure
+    - run: dep ensure -v
 
     #run tests with coverage
     - run: |
