--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,41 +7,14 @@ jobs:
     docker:
     # specify the version
     - image: circleci/golang:1.11
+    
+    - image: redislabs/redisgraph:edge
+      port: 6379:6379
 
-    # Specify service dependencies here if necessary
-    # CircleCI maintains a library of pre-built images
-    # documented at https://circleci.com/docs/2.0/circleci-images/
-    # - image: circleci/postgres:9.4
-
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
-    working_directory: /go/src/github.com/RedisLabs/redis-timeseries-go
+  working_directory: /go/src/github.com/RedisLabs/redis-timeseries-go
     steps:
-    - checkout
-
-    # install redis
-    - run: git clone -b 5.0 --depth 1 https://github.com/antirez/redis.git
-    - run: cd redis && sudo make -j install
-
-    # install redis-timeseries
-    - run: git clone https://github.com/RedisLabsModules/redis-timeseries.git
-    - run: |
-        cd redis-timeseries
-        git submodule init
-        git submodule update
-        cd src
-        make -j all
-
-    # run redis with module
-    - run: |
-        redis-server --daemonize yes --loadmodule redis-timeseries/src/redis-tsdb-module.so --requirepass SUPERSECRET
-        sleep 1
-
-    # install golang deps
-    - run: curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-    - run: dep ensure -v
+    - checkout   
+    - run: go get -v -t -d ./...
 
     #run tests with coverage
     - run: |
