--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,5 @@ jobs:
       - run: go get -v -t -d ./...
 
       #run tests with coverage
-      - run:|
-        go test -v -coverprofile=coverage.out
-        go tool cover -func=coverage.out
+      - run: go test -v -coverprofile=coverage.out
+      - run: go tool cover -func=coverage.out
