--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       # specify the version
       - image: circleci/golang:1.11
    
-      - image: redislabs/redisgraph:edge "redis-server --loadmodule /usr/lib/redis/modules/redis-tsdb-module.so --requirepass SUPERSECRET"
+      - image: redislabs/redistimeseries:edge "redis-server --loadmodule /usr/lib/redis/modules/redis-tsdb-module.so --requirepass SUPERSECRET"
         port: 6379:6379
 
     working_directory: /go/src/github.com/RedisLabs/redis-timeseries-go
