--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,5 +18,6 @@ jobs:
       - run: go get -v -t -d ./...
 
       #run tests with coverage
-      - run: go test -v -coverprofile=coverage.out
-      - run: go tool cover -func=coverage.out
+      - run: go test -v -race -coverprofile=coverage.txt -covermode=atomic
+      - run: go tool cover -func=coverage.txt
+      - run: bash <(curl -s https://codecov.io/bash) -t ${CODECOV_TOKEN}
