[fix] enforcing MAX_SAMPLE_PER_CHUNK to 256

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,14 @@ jobs:
     docker:
       # specify the version
       - image: circleci/golang:1.12
-   
-      - image: redislabs/redistimeseries:edge 
-        command: ['--loadmodule', '/usr/lib/redis/modules/redistimeseries.so', '--requirepass', 'SUPERSECRET']
+
+      - image: redislabs/redistimeseries:edge
+        command: ['--requirepass', 'SUPERSECRET' '--loadmodule', '/usr/lib/redis/modules/redistimeseries.so', 'MAX_SAMPLE_PER_CHUNK', '256']
         port: 6379:6379
 
     working_directory: /go/src/github.com/RedisTimeSeries/redistimeseries-go
     steps:
-      - checkout   
+      - checkout
       - run: go get -v -t -d ./...
 
       #run tests with coverage
