--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,13 @@
 .project
 
 vendor/
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
