--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,12 @@
 # Golang CircleCI 2.0 configuration file
 #
 # Check https://circleci.com/docs/2.0/language-go/ for more details
-version: 2.1
+version: 2
 jobs:
-  build:
+  build: # test with redistimeseries:edge
     docker:
-      # specify the version
       - image: circleci/golang:1.13
-
       - image: redislabs/redistimeseries:edge
-        port: 6379:6379
 
     working_directory: /go/src/github.com/RedisTimeSeries/redistimeseries-go
     steps:
