--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
     working_directory: /go/src/github.com/RedisTimeSeries/redistimeseries-go
     steps:
       - checkout
+      - run: make checkfmt
       - run: make get
       - run: make coverage
       - run: bash <(curl -s https://codecov.io/bash) -t ${CODECOV_TOKEN}
