[add] added linter to ci. applied linter to all code (with exception to examples)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,12 @@ jobs:
       - checkout
       - run: make checkfmt
       - run: make get
+      - run:
+          name: "Validate lint"
+            command: |
+              curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.29.0
+              make lint
+      - run: make test
       - run: make coverage
       - run: bash <(curl -s https://codecov.io/bash) -t ${CODECOV_TOKEN}
 
